feat: add delete expense api
